sources = wnasrt.c  wncons.h  wneq.h   wnhash.h  wnhtab.h  wnlib.h  wnmcpy.c  wnmemb.h  wnmemg.c  wnmemn.c  wnnop.h   wnpeq.c   wnphsl.c  wnrtab.h \
wnasrt.h  wncpy.h   wnerr.h  wnhtab.c  wnhtbl.h  wnmax.h  wnmemb.c  wnmem.c   wnmem.h   wnnop.c   wnpcpy.c  wnphsh.c  wnport.h  wnstr.h

noinst_LTLIBRARIES = libwn.la
libwn_la_SOURCES = $(sources)
